# SWCParser

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: SWCP.h
tests/: illegal1.swc  illegal2.swc  illegal3.swc  illegal4.swc  illegal5.swc  test.cpp  test1.swc  test2.swc  test3.swc  test4.swc  test5.swc
